<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >
	<LinearLayout
        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
	 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo3" />
    </LinearLayout>  
    <!-- 会员类型 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView0a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memTypeTxt" />

        <Button
            android:id="@+id/usertype"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/memtypeBtn1Txt"
            android:textColor="@color/blue" />

        <CheckBox
            android:id="@+id/usertype2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="false"
            android:text="@string/memtypeBtn2Txt" />

"
    </LinearLayout> 
    <!-- 手机号 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sjTxt" />

        <EditText
            android:id="@+id/sj"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sjSMTxt2"
            android:inputType="number|numberSigned"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:textColorLink="@color/red" />

    </LinearLayout>
	<!-- 手机号说明 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/sjSMTxt" />

    </LinearLayout>
    <!-- 密码 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView011"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwdregTxt" />

        <EditText
            android:id="@+id/pwdreg"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pwdregSMTxt"
            android:inputType="number|numberSigned"
            android:singleLine="true" 
            android:password="true">

           
        </EditText>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:textColorLink="@color/red" 
            />

    </LinearLayout>
    <!-- 确认密码 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView0111"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwdreg2Txt" />

        <EditText
            android:id="@+id/pwdreg2"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pwdreg2SMTxt"
            android:inputType="number|numberSigned"
            android:singleLine="true" 
            android:password="true">

            
        </EditText>

        <TextView
            android:id="@+id/textView122"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:textColorLink="@color/red" />

    </LinearLayout>
    <!-- 单位名称 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView0122"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companyTxt" />

        <EditText
            android:id="@+id/company"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/companySMTxt"
            android:singleLine="true" >

            
        </EditText>
    </LinearLayout>
    <!-- 联系人 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01223"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name1Txt" />

        <EditText
            android:id="@+id/name1"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name1SMTxt"
            android:singleLine="true" >

            
        </EditText>

        <TextView
            android:id="@+id/textView1333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:textColorLink="@color/red" />

    </LinearLayout>
    <!-- 性别 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView0144"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/sexTxt" />

		<RadioGroup android:id="@+id/sexGroup1"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:checkedButton="@+id/man" 
		    android:orientation="horizontal" > 
	        
        <RadioButton
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manTxt" />

        <RadioButton
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/womanTxt" />
		</RadioGroup>
    </LinearLayout>
    <!-- 身份证号码 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        >

        

        <TextView
            android:id="@+id/TextView0155"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postcardTxt" />
        
        <EditText
            android:id="@+id/postcard"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/postcardSMTxt"
            android:singleLine="true" >

            
        </EditText>

        <TextView
            android:id="@+id/TextView0211"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:textColorLink="@color/red" />
    </LinearLayout>
	<!-- 所在地 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addrTxt" />

        <Button
            android:id="@+id/province"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/provinceTxt"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/city"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/cityTxt"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/town"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/townTxt"
            android:textColor="@color/blue"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:textColorLink="@color/red" />
    </LinearLayout>

	<!-- 电话 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telTxt" />

        <EditText
            android:id="@+id/telnum"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telnumTxt"
            android:inputType="number|numberSigned"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telSMTxt2"
            android:inputType="textPassword|numberSigned" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:textColorLink="@color/red" />

    </LinearLayout>
	<!-- 电话说明-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/telSMTxt" />

    </LinearLayout>
	<!-- QQ -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QQTxt" />

        <EditText
            android:id="@+id/qq"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/QQSMTxt"
            android:inputType="number|numberSigned"
            android:singleLine="true" />
        <TextView
            android:id="@+id/textView62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:textColorLink="@color/red" />

    </LinearLayout>
	<!-- 同意提交 按钮 -->
    <Button
        android:id="@+id/agreeBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreeBtnTxt"
        android:textColor="@color/red"
        android:textColorLink="@color/red" />
    
	<!-- 不同意 按钮 -->
    <Button
        android:id="@+id/noAgreeBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/noBtnTxt" />

	<!-- 阅读条款 按钮 -->
    <Button
        android:id="@+id/serviceBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/serviceBtnTxt" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>
